# stock_tracker

./: README.md  config.py  home.py  pyproject.toml
pages/: portfolio.py
script/: bootstrap  lint  server  setup
