[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Joyce W. <jianjoycewu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.31.0"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
